--- a/src/drbg/sections/03-supported.adoc
+++ b/src/drbg/sections/03-supported.adoc
@@ -2,61 +2,14 @@
 [#supported]
 == Supported DRBGs
 
-The following deterministic random bit generators *MAY* be advertised by the ACVP compliant cryptographic module:
+The following deterministic random bit generator algorithms *MAY* be advertised by the ACVP compliant cryptographic module:
 
-* hashDRBG-SHA-1
-* hashDRBG-SHA2-224
-* hashDRBG-SHA2-256
-* hashDRBG-SHA2-384
-* hashDRBG-SHA2-512
-* hashDRBG-SHA2-512/224
-* hashDRBG-SHA2-512/256
-* hmacDRBG-SHA-1
-* hmacDRBG-SHA2-224
-* hmacDRBG-SHA2-256
-* hmacDRBG-SHA2-384
-* hmacDRBG-SHA2-512
-* hmacDRBG-SHA2-512/224
-* hmacDRBG-SHA2-512/256
-* ctrDRBG-AES-128
-* ctrDRBG-AES-192
-* ctrDRBG-AES-256
-* ctrDRBG-TDES
+* hashDRBG
+* hmacDRBG
+* ctrDRBG
 
 === Counter DRBG Triple-DES
 
 The "ctrDRBG-TDES" mode shall only be used with the three-key option of the Triple-DES algorithm.
 
-[[value_req_per_option]]
-=== Supported values per DRBG option
 
-DRBG minimum/maximum values for several options such as minimum entropy and nonce, vary depending on the DRBG capabilities registered. The following table depicts those values
-
-[[supported_values]]
-.Supported DRBG Values
-|===
-| DRBG Algorithm | Mode | Derivation Function | Max Security Strength | Min Entropy Len | Max Entropy Len | Max PersoString | Max Addl String | Min Nonce Len
-
-| Counter | AES128 | TRUE | 128 | 128 | 65536 | 65536 | 65536 | 64
-| Counter | AES192 | TRUE | 192 | 192 | 65536 | 65536 | 65536 | 96
-| Counter | AES256 | TRUE | 256 | 256 | 65536 | 65536 | 65536 | 128
-| Counter | TDES | TRUE | 112 | 112 | 65536 | 65536 | 65536 | 56
-| Counter | AES128 | FALSE | 128 | 256 | 256 | 256 | 256 | 0
-| Counter | AES192 | FALSE | 192 | 320 | 320 | 320 | 320 | 0
-| Counter | AES256 | FALSE | 256 | 384 | 384 | 384 | 384 | 0
-| Counter | TDES | FALSE | 112 | 232 | 232 | 232 | 232 | 0
-| Hash | SHA1 | N/A | 128 | 128 | 65536 | 65536 | 65536 | 64
-| Hash | SHA2-224 | N/A | 192| 192 | 65536 | 65536 | 65536 | 96
-| Hash | SHA2-256 | N/A | 256| 256 | 65536 | 65536 | 65536 | 128
-| Hash | SHA2-384 | N/A | 256| 256 | 65536 | 65536 | 65536 | 128
-| Hash | SHA2-512 | N/A | 256| 256 | 65536 | 65536 | 65536 | 128
-| Hash | SHA2-512/224 | N/A | 192 | 192 | 65536 | 65536 | 65536 | 96
-| Hash | SHA2-512/256 | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128
-| Hmac | SHA1 | N/A | 128 | 128 | 65536 | 65536 | 65536 | 64
-| Hmac | SHA2-224 | N/A | 192 | 192 | 65536 | 65536 | 65536 | 96
-| Hmac | SHA2-256 | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128
-| Hmac | SHA2-384 | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128
-| Hmac | SHA2-512 | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128
-| Hmac | SHA2-512/224 | N/A | 192 | 192 | 65536 | 65536 | 65536 | 96
-| Hmac | SHA2-512/256 | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128
-|===
