Fixes small KDA oneStep formatting error

--- a/src/kas/sp800-56c/onestep/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56c/onestep/sections/05-capabilities.adoc
@@ -90,11 +90,9 @@ Evaluated as:
 * "123456789CAFECAFE434156536964a1b2c3d4e5"
 
 === Registration Example
+NOTE: there is no difference in registration properties for OneStep testing between <<SP800-56Cr1>> and <<SP800-56Cr2>> aside from the new "t" secondary shared secret that can be used for a <<SP800-56Cr2>> Fixed info pattern (See <<fixedinfopatcon>>).
 
 .Registration JSON Example
-
-  Note there is no difference in registration properties for OneStep testing between <<SP800-56Cr1>> and <<SP800-56Cr2>> aside from the new "t" secondary shared secret that can be used for a <<SP800-56Cr2>> Fixed info pattern (See <<fixedinfopatcon>>).
-
 [source,json]
 ----
 {
