Adds auxSharedSecretLen usesHybridSharedSecret KDA registration parameters
Adds the auxSharedSecretLen and usesHybridSharedSecret registration parameters to KDA HKDF Sp800-56Cr2 and KDA TwoStep Sp800-56Cr2.

Adds the min/max values for a couple of KDA HKDF and KDA twoStep registration properties.

https://github.com/usnistgov/ACVP/issues/1377

--- a/src/kas/sp800-56c/twostep/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56c/twostep/sections/05-capabilities.adoc
@@ -14,8 +14,10 @@ A registration *SHALL* use these properties:
 | revision| The algorithm testing revision to use.| value| "Sp800-56Cr1" or "Sp800-56Cr2"
 | prereqVals| Prerequisite algorithm validations| array of prereqAlgVal objects| See <<prereq_algs>>
 | capabilities | The two step configuration objects | array of <<twostepkdf>> | See <<twostepkdf>>
-| z | The domain of values representing the min/max lengths of Z the implementation can support. | Domain | 
-| l | The length (in bits) of the largest derived keying material the implementation can produce (up to a max of 2048). | number | 
+| z | The length(s) of the shared secret, Z, the IUT supports in bits. | Domain | Min: 224, Max: 65536, Increment: 8
+| usesHybridSharedSecret | Whether the IUT uses a hybrid shared secret. Only applicable for <<SP800-56Cr2>>. This property is required and must be set to 'true' for IUTs that implement a hybrid shared secret. Omit this property for "SP800-56Cr1" testing. If omitted for "SP800-56Cr2" testing, a value of 'false' will be assumed. | Boolean | true or false
+| auxSharedSecretLen | The length(s) of the auxiliary shared secret, T, the IUT supports in bits. Only applicable for <<SP800-56Cr2>>. This property is required for IUTs that implement a hybrid shared secret. Omit this property for "SP800-56Cr1" testing or for "SP800-56Cr2" testing without a hybrid shared secret. | Domain | Min: 112, Max: 65536, Increment: 8
+| l | The length (in bits) of the largest derived keying material the implementation can produce (up to a max of 2048). | number | Min: 112; Max: 2048
 | performMultiExpansionTests | Should multi expansion runs of the KDA be tested (in addition to the single expansion tests)? Only applicable for <<SP800-56Cr2>> | boolean | true, false
 |===
 
