--- a/src/rsa/sections/03-supported.adoc
+++ b/src/rsa/sections/03-supported.adoc
@@ -17,6 +17,7 @@ The following algorithms *MAY* be advertised by the ACVP compliant cryptographic
 | "RSA" | "sigVer" | "FIPS186-4" | <<FIPS186-4>>
 | "RSA" | "sigVer" | "FIPS186-2" | <<FIPS186-2>>
 | "RSA" | "signaturePrimitive" | "1.0" | <<FIPS186-5>>
+| "RSA" | "signaturePrimitive" | "2.0" | <<FIPS186-5>>
 | "RSA" | "decryptionPrimitive" | "1.0" | <<SP800-56B>>
 | "RSA" | "decryptionPrimitive" | "SP800-56Br2" | <<SP800-56Br2>>
 |===
