Updated documentation files for rsasigprim2.0

--- a/src/rsa/sections/05-sigprim-capabilities.adoc
+++ b/src/rsa/sections/05-sigprim-capabilities.adoc
@@ -32,7 +32,7 @@ The following is an example of the registration
 
 The following RSA / SignaturePrimitive / 2.0 capabilities *MAY* be advertised by the ACVP compliant crypto module:
 
-[[SigPrimRSAFIPS186-4]]
+[[SignaturePrimitive2-0]]
 .Supported RSA SignaturePrimitive 2.0 JSON Values
 |===
 | JSON value | Description | JSON type | Valid values
@@ -49,9 +49,11 @@ The following is an example of the registration
 ----
 {
   "algorithm": "RSA",
-  "mode": "secryptionPrimitive",
+  "mode": "signaturePrimitive",
   "revision": "2.0",
   "isSample": true,
+  "pubExpMode": "fixed",
+  "fixedPubExp": "010001"
   "keyFormat": [
     "standard",
     "crt"
