--- a/src/rsa/sections/07-sigprim-responses.adoc
+++ b/src/rsa/sections/07-sigprim-responses.adoc
@@ -3,7 +3,7 @@
 
 Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each RSA / Signature Primitive / * test vector.
 
-The following table describes the JSON elements for the test case responses for RSA / Signature Primitive / * .
+The following tables describe the JSON elements for the test case responses for RSA / Signature Primitive / * .
 
 [[rsa_sigprim_vs_tr_table]]
 .RSA Signature Primitive Test Case Results JSON Object
@@ -15,7 +15,7 @@ The following table describes the JSON elements for the test case responses for 
 | testPassed | If the message could not be signed | boolean
 |===
 
-The following is an example of the response for RSA / Signature Primitive / * .
+The following is an example of the response for RSA / Signature Primitive / 1.0 .
 
 [source, json]
 ----
@@ -31,7 +31,7 @@ The following is an example of the response for RSA / Signature Primitive / * .
       "tests": [
         {
           "tcId": 1,
-		  "testPassed": true,
+		      "testPassed": true,
           "signature": "a60b879a8fa382fdf4..."
         },
         {
@@ -47,3 +47,41 @@ The following is an example of the response for RSA / Signature Primitive / * .
   ]
 }
 ----
+
+[[rsa_sigprimV2_0_vs_tr_tabl]]
+.RSA Signature Primitive Test Case Results JSON Object
+|===
+| JSON Value | Description | JSON type
+
+| tcId | Numeric identifier for the test case | integer
+| testPassed | If the message could not be signed | boolean
+|===
+
+The following is an example of the response for RSA / Signature Primitive / v2.0 .
+
+[source, json]
+----
+{
+  "vsId": 0,
+  "algorithm": "RSA",
+  "mode": "signaturePrimitive",
+  "revision": "2.0",
+  "isSample": true,
+  "testGroups": [
+    {
+      "tgId": 1,
+      "tests": [
+        {
+          "tcId": 1,
+		      "testPassed": true,
+        },
+        {
+          "tcId": 2,
+          "testPassed": false
+        }
+      ]
+    }
+  ]
+}
+----
+
