Minor change to SigPrim2.0 table name

--- a/src/rsa/sections/07-sigprim-responses.adoc
+++ b/src/rsa/sections/07-sigprim-responses.adoc
@@ -6,7 +6,7 @@ Each test group contains an array of one or more test cases. Each test case is a
 The following tables describe the JSON elements for the test case responses for RSA / Signature Primitive / * .
 
 [[rsa_sigprim_vs_tr_table]]
-.RSA Signature Primitive Test Case Results JSON Object
+.RSA Signature Primitive 1.0 Test Case Results JSON Object
 |===
 | JSON Value | Description | JSON type
 
@@ -48,8 +48,9 @@ The following is an example of the response for RSA / Signature Primitive / 1.0 
 }
 ----
 
-[[rsa_sigprimV2_0_vs_tr_tabl]]
-.RSA Signature Primitive Test Case Results JSON Object
+
+[[rsa_sigprimV2_0_vs_tr_table]]
+.RSA Signature Primitive 2.0 Test Case Results JSON Object
 |===
 | JSON Value | Description | JSON type
 
