Updated adoc sections to correctly link the proper Sp800 and not SP800.

--- a/src/rsa/sections/05-decprim-capabilities.adoc
+++ b/src/rsa/sections/05-decprim-capabilities.adoc
@@ -27,11 +27,11 @@ An example registration is the following
 }
 ----
 
-=== RSA DecryptionPrimitive SP800-56Br2 Mode Capabilities
+=== RSA DecryptionPrimitive Sp800-56Br2 Mode Capabilities
 
-The RSA decryptionPrimitive mode capabilities are advertised as JSON objects within the array of 'capabilities' as part of the 'capability_exchange' element of the ACVP JSON registration message. Two properties are supported in the registration, A Modulus array that supports three modulo values of 2048, 3072, and 4096. For Private Key Modes, we support "Standard/AFT" and "CRT" (Chinese Remainder Theorom). For the Standard/AFT mode see <<SP800-56Br2>>, Section 7.1.2.1 for details, and for CRT mode, we provide a see <<SP800-56Br2>>, Section 7.1.2.3 for details.
+The RSA decryptionPrimitive mode capabilities are advertised as JSON objects within the array of 'capabilities' as part of the 'capability_exchange' element of the ACVP JSON registration message. Two properties are supported in the registration, A Modulus array that supports three modulo values of 2048, 3072, and 4096. For Private Key Modes, we support "Standard/AFT" and "CRT" (Chinese Remainder Theorom). For the Standard/AFT mode see <<Sp800-56Br2>>, Section 7.1.2.1 for details, and for CRT mode, we provide a see <<Sp800-56Br2>>, Section 7.1.2.3 for details.
 
-In testing in Standard mode, a 'cipherText', along with key parameters 'P', 'Q', and 'D' values are provided, see <<SP800-56Br2>>, Section 7.1.2.1 for details. When testing for Chinese Remainder Theorom, a 'cipherText', 'dp', 'dQ', and 'qInv' are provided, see <<SP800-56Br2>>, Section 7.1.2.1 for details. 
+In testing in Standard mode, a 'cipherText', along with key parameters 'P', 'Q', and 'D' values are provided, see <<Sp800-56Br2>>, Section 7.1.2.1 for details. When testing for Chinese Remainder Theorom, a 'cipherText', 'dp', 'dQ', and 'qInv' are provided, see <<S800-56Br2>>, Section 7.1.2.1 for details. 
 See the ACVP specification for details on the registration message.
 
 An example registration is the following
