Reverting previous commit, broke RSA documentation.

--- a/src/rsa/sections/06-decprim-test-vectors.adoc
+++ b/src/rsa/sections/06-decprim-test-vectors.adoc
@@ -67,11 +67,11 @@ Here is an abbreviated yet fully constructed example of the prompt
 ]
 ----
 
-=== Test Groups for RSA Decryption Primitive Sp800-56Br2
+=== Test Groups for RSA Decryption Primitive SP800-56Br2
 
 The testGroups element at the top level in the test vector JSON object is an array of test groups. Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set. For instance, all test vectors that use the same key size would be grouped together. The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the {spec-algorithm} JSON elements of the Test Group JSON object
 
-.RSA Decryption Primitive Sp800-56Br2 Test Group Properties
+.RSA Decryption Primitive SP800-56Br2 Test Group Properties
 |===
 | JSON Values | Description | JSON Type
 
