--- a/src/rsa/sections/07-decprim-responses.adoc
+++ b/src/rsa/sections/07-decprim-responses.adoc
@@ -1,5 +1,5 @@
 [[rsa_decprim_responses]]
-=== RSA Decryption Primitive v1.0 Test Group Responses
+=== RSA Decryption Primitive Test Group Responses
 
 Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each RSA / Decryption Primitive / * test vector.
 
@@ -52,14 +52,14 @@ The following is an example of the response for RSA / Decryption Primitive / * .
 }
 ----
 
-=== RSA Decryption Primitive Sp800-56Br2 Test Group Responses
+=== RSA Decryption Primitive SP800-56Br2 Test Group Responses
 
-Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each RSA / Decryption Primitive Sp800-56Br2 / * test vector.
+Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each RSA / Decryption Primitive SP800-56Br2 / * test vector.
 
 The following table describes the JSON elements for the test case responses for RSA / Decryption Primitive / * .
 
 [[rsa_decprim_sp800_56br2_vs_tr_table]]
-.RSA Decryption Primitive Sp800-56Br2 Test Case Results JSON Object
+.RSA Decryption Primitive SP800-56Br2 Test Case Results JSON Object
 |===
 | JSON Value | Description | JSON type
 
