Revert to 5ddcdddde7ca7f312deb3c8521920cab74a33095, removes broken RSA documentation update.

--- a/src/rsa/sections/05-decprim-capabilities.adoc
+++ b/src/rsa/sections/05-decprim-capabilities.adoc
@@ -1,8 +1,5 @@
 [[rsa_decprim_capabilities]]
-
-Note: RSA DecryptionPrimitive 1.0 should be used for PIV card testing, and RSA DecryptionPrimitive Sp800-56Br2 for comforming to Sp800-56Br2 requirements.
-
-=== RSA DecryptionPrimitive v1.0 Mode Capabilities
+=== RSA DecryptionPrimitive Mode Capabilities
 
 The RSA decryptionPrimitive mode capabilities are advertised as JSON objects within the array of 'capabilities' as part of the 'capability_exchange' element of the ACVP JSON registration message. A single property is allowed in the registration, 'modulo' with the only approved value of 2048. In this mode, the only tested capability is the correct exponentiation 's = cipherText\^d mod n', where 'cipherText' is a cipherText to be decrypted, 'd' is the private exponent and 'n' is the modulus. See <<SP800-56B>>, Section 7.1.2 for details.
 
@@ -24,33 +21,5 @@ An example registration is the following
         {"algorithm": "DRBG", "valValue": "654321"},
         {"algorithm": "SHA", "valValue": "7890"}
     ]
-}
-----
-
-=== RSA DecryptionPrimitive SP800-56Br2 Mode Capabilities
-
-The RSA decryptionPrimitive mode capabilities are advertised as JSON objects within the array of 'capabilities' as part of the 'capability_exchange' element of the ACVP JSON registration message. Two properties are supported in the registration, A Modulus array that supports three modulo values of 2048, 3072, and 4096. For Private Key Modes, we support "Standard/AFT" and "CRT" (Chinese Remainder Theorom). For the Standard/AFT mode see <<SP800-56Br2>>, Section 7.1.2.1 for details, and for CRT mode, we provide a see <<SP800-56Br2>>, Section 7.1.2.3 for details.
-
-In testing in Standard mode, a 'cipherText', along with key parameters 'P', 'Q', and 'D' values are provided, see <<SP800-56Br2>>, Section 7.1.2.1 for details. When testing for Chinese Remainder Theorom, a 'cipherText', 'dp', 'dQ', and 'qInv' are provided, see <<SP800-56Br2>>, Section 7.1.2.1 for details. 
-See the ACVP specification for details on the registration message.
-
-An example registration is the following
-
-[source, json]
-----
-{
-  "algorithm": "RSA",
-  "mode": "DecryptionPrimitive",
-  "revision": "Sp800-56Br2",
-  "isSample": true,
-  "keyFormat": [
-    "standard",
-    "crt"
-  ],
-  "modulus": [
-    2048,
-    3072,
-    4096
-  ]
 }
 ----
