Completes KDA HKDF/TwoStep Hybrid Shared Secret Updates
Updates KDA HKDF and TwoStep specs for the added support for hybrid shared secret testing.
Minor KDA OneStep and OneStepNoCounter spec updates related to hybrid shared secret testing.

--- a/src/kas/sp800-56c/onestep/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56c/onestep/sections/05-capabilities.adoc
@@ -78,7 +78,7 @@ algorithmId.
   ** The length of the derived keying material in bits, *MUST* be represented in 32 bits for ACVP testing.
 
 * t
-  ** A random value used to represent a secondary shared secret. Only applicable to <<SP800-56Cr2>>.
+  ** A random value used to represent a secondary/auxiliary shared secret. Only applicable to <<SP800-56Cr2>>.
 
 Example (Note that party U is the server in this case "434156536964", party V is the IUT "a1b2c3d4e5"):
 
@@ -98,7 +98,7 @@ NOTE: there is no difference in registration properties for OneStep testing betw
 {
   "algorithm": "KDA",
   "mode": "OneStep",
-  "revision": "Sp800-56Cr1",
+  "revision": "Sp800-56Cr2",
   "prereqVals": [
     {
       "algorithm": "DRBG",
@@ -125,7 +125,7 @@ NOTE: there is no difference in registration properties for OneStep testing betw
       ]
     }
   ],
-  "fixedInfoPattern": "algorithmId||l||uPartyInfo||vPartyInfo",
+  "fixedInfoPattern": "t||algorithmId||l||uPartyInfo||vPartyInfo",
   "encoding": [
     "concatenation"
   ],
