--- a/src/kas/sp800-56c/onestepnocounter/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56c/onestepnocounter/sections/05-capabilities.adoc
@@ -78,7 +78,7 @@ algorithmId.
   ** The length of the derived keying material in bits, *MUST* be represented in 32 bits for ACVP testing.
 
 * t
-  ** A random value used to represent a secondary shared secret. Only applicable to <<SP800-56Cr2>>.
+  ** A random value used to represent a secondary/auxiliary shared secret. Only applicable to <<SP800-56Cr2>>.
 
 Example (Note that party U is the server in this case "434156536964", party V is the IUT "a1b2c3d4e5"):
 
@@ -126,7 +126,7 @@ Evaluated as:
       ]
     }
   ],
-  "fixedInfoPattern": "algorithmId||l||uPartyInfo||vPartyInfo",
+  "fixedInfoPattern": "t||algorithmId||l||uPartyInfo||vPartyInfo",
   "encoding": [
     "concatenation"
   ],
