--- a/src/rsa/sections/98-references.adoc
+++ b/src/rsa/sections/98-references.adoc
@@ -13,6 +13,7 @@
 * [[[SP800-106,NIST SP 800-106]]]
 * [[[SP800-131A,NIST SP 800-131A]]]
 * [[[SP800-56B,NIST SP 800-56B]]]
+* [[[SP800-56Br2,NIST SP 800-56Bbr2]]]
 
 
 [%bibitem]
