Adding working updates.

--- a/src/rsa/sections/05-sigprim-capabilities.adoc
+++ b/src/rsa/sections/05-sigprim-capabilities.adoc
@@ -28,3 +28,39 @@ The following is an example of the registration
     "fixedPubExp": "010001"
 }
 ----
+
+The following RSA / SignaturePrimitive / 2.0 capabilities *MAY* be advertised by the ACVP compliant crypto module:
+
+ [[SignaturePrimitive2-0]]
+ .Supported RSA SignaturePrimitive 2.0 JSON Values
+ |===
+ | JSON value | Description | JSON type | Valid values
+
+ | modulo | supported RSA modulo for signature generation - see <<FIPS186-4>>, Section 5 | integer | any one of the supported modulo sizes {2048, 3072, 4096}
+ | keyFormat | The format by which the client expects the private key to be communicated. Standard refers to the default p, q, d values. Chinese Remainder Theorem uses decomposed values for optimized decryption p, q, dmp1, dmq1, iqmp | string | "standard", "crt"
+ | pubExpMode | Whether the IUT can handle a random or fixed public exponent | string | "random", "fixed"
+ | fixedPubExp | The fixed public exponent e | hex | Any value supported by <<FIPS186-4>>: 65537 - 2^256-1, odd
+ |===
+
+ The following is an example of the registration
+
+ [source, json]
+ ----
+ {
+   "algorithm": "RSA",
+   "mode": "signaturePrimitive",
+   "revision": "2.0",
+   "isSample": true,
+   "pubExpMode": "fixed",
+   "fixedPubExp": "010001"
+   "keyFormat": [
+     "standard",
+     "crt"
+   ],
+   "modulus": [
+     2048,
+     3072,
+     4096
+   ]
+ }
+ ----
