--- a/src/xof/sections/04-testtypes.adoc
+++ b/src/xof/sections/04-testtypes.adoc
@@ -43,6 +43,7 @@ MCT(Msg, MaxOutLen, MinOutLen, OutLenIncrement)
       Customization = BitsToString(InnerMsg || Rightmost_Output_bits);
     }
 
+    Output[0] = Output[1000];
     OutputJ[j] = Output[1000];
     Output[i] = Output[1000];
   }
@@ -81,6 +82,7 @@ MCT(Msg, MaxOutLen, MinOutLen, OutLenIncrement, MaxBlockSize, MinBlockSize)
       Customization = BitsToString(InnerMsg || Rightmost_Output_bits);
     }
   
+    Output[0] = Output[1000];
     OutputJ[j] = Output[1000];
     Output[i] = Output[1000];
   }
