--- a/src/rsa/sections/07-sigprim-responses.adoc
+++ b/src/rsa/sections/07-sigprim-responses.adoc
@@ -15,7 +15,7 @@ The following tables describe the JSON elements for the test case responses for 
 | testPassed | If the message could not be signed | boolean
 |===
 
-The following is an example of the response for RSA / Signature Primitive / v1.0 .
+The following is an example of the response for RSA / Signature Primitive / v1.0.
 
 [source, json]
 ----
@@ -49,7 +49,7 @@ The following is an example of the response for RSA / Signature Primitive / v1.0
 ----
 
 [[rsa_sigprimV2_0_vs_tr_table]]
-.RSA Signature Primitive 2.0 Test Case Results JSON Object
+.RSA Signature Primitive v2.0 Test Case Results JSON Object
 |===
 | JSON Value | Description | JSON type
 
@@ -57,7 +57,7 @@ The following is an example of the response for RSA / Signature Primitive / v1.0
 | testPassed | If the message could not be signed | boolean
 |===
 
-The following is an example of the response for RSA / Signature Primitive / v2.0 .
+The following is an example of the response for RSA / Signature Primitive / v2.0.
 
 [source, json]
 ----
