tries to fix formatting error in KAS ECC Table 5

--- a/src/kas/sp800-56ar3/ecc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar3/ecc/sections/05-capabilities.adoc
@@ -90,7 +90,10 @@ All other scheme capabilities are advertised as a self-contained JSON object usi
 | kasRole| Roles supported for key agreement| array| initiator and/or responder| No
 | kdfMethods| The KDF methods to use when testing KAS schemes. | object| <<kdfmethods>>| No
 | keyConfirmationMethod| The KeyCnfirmation capabilities (when supported) for the scheme.| object| <<keyconfirmmethod>>| Yes
-| l| The length of the key to derive (using a KDF) or transport (using a KTS scheme).  This value should be large enough to accommodate the key length used for the mac algorithms in use for key confirmation, ideally the maximum value the IUT can support with their KAS/KTS implementation.  Maximum value (for testing purposes) is 1024.| integer| 128 minimum without KC, 136 minimum with KC, maximum 1024.| No
+| l| The length of the key to derive (using a KDF) or transport (using a KTS scheme).  This value should be large enough to
+accommodate the key length used for the mac algorithms in use for key confirmation, ideally the maximum value the IUT can support 
+with their KAS/KTS implementation.  Maximum value (for testing purposes) is 1024.| integer| 128 minimum without KC, 136 minimum with
+KC, maximum 1024.| No
 |===
 
 [[kdfmethods]]
