--- a/src/kas/sp800-56c/hkdf/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56c/hkdf/sections/05-capabilities.adoc
@@ -51,12 +51,16 @@ Pattern candidates:
 substitutes "0123456789ABCDEF" in place of the field
 
 * uPartyInfo
-  ** uPartyId { || ephemeralKey } { || ephemeralNonce } { || dkmNonce } { || c }
-    *** "optional" items such as ephemeralKey *MUST* be included when available for ACVP testing.
+  ** uPartyId { || ephemeralData }
+    *** For the purposes of the testing defined in this specification, the uPartyInfo value
+    used to create the fixedInfo that is input to the key derivation function *SHALL* take the form of "uPartyId { || ephemeralData }". Because the KDA is being tested in isolation of the specific schemes it may be used with, ephemeralData is used in place of "{ || ephemeralKey } { || ephemeralNonce } { || dkmNonce } { || c }"
+    *** For a given test case, a partyId value (see <<fixedInfo>>) *SHALL* always be given. ephemeralData values (see <<fixedInfo>>) may be provided or omitted.
 
 * vPartyInfo
-  ** vPartyId { || ephemeralKey } { || ephemeralNonce } { || dkmNonce } { || c }
-    *** "optional" items such as ephemeralKey *MUST* be included when available for ACVP testing.
+  ** vPartyId { || ephemeralData }
+    *** For the purposes of the testing defined in this specification, the vPartyInfo value
+    used to create the fixedInfo that is input to the key derivation function *SHALL* take the form of "vPartyId { || ephemeralData }". Because the KDA is being tested in isolation of the specific schemes it may be used with, ephemeralData is used in place of "{ || ephemeralKey } { || ephemeralNonce } { || dkmNonce } { || c }"
+    *** For a given test case, a partyId value (see <<fixedInfo>>) *SHALL* always be given. ephemeralData values (see <<fixedInfo>>) may be provided or omitted.
 
 * context
   ** Random value chosen by ACVP server to represent the context.
