--- a/src/kas/sp800-56br2/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56br2/sections/05-capabilities.adoc
@@ -185,7 +185,7 @@ The one step no counter KDF is a special implementation of the one step KDF.  Th
 | JSON Value| Description| JSON Type| Valid Values| Optional
 
 | auxFunctionName| The auxiliary function to use. Note that a customization string of "KDF" is used for the function when KMAC is utilized.| string| SHA-1, SHA2-224, SHA2-256, SHA2-384, SHA2-512, SHA2-512/224, SHA2-512/256, SHA3-224, SHA3-256, SHA3-384, SHA3-512, HMAC-SHA-1, HMAC-SHA2-224, HMAC-SHA2-256, HMAC-SHA2-384, HMAC-SHA2-512, HMAC-SHA2-512/224, HMAC-SHA2-512/256, HMAC-SHA3-224, HMAC-SHA3-256, HMAC-SHA3-384, HMAC-SHA3-512, KMAC-128, KMAC-256 | No
-| l| The length of the keying material to derive (cannot exceed output length of aux function)| No
+|l |The length of the keying material to derive (cannot exceed output length of aux function)| integer | may not exceed output length of aux function  |No
 | macSaltMethods| How the salt is determined (default being all 00s, random being a random salt). | array of string| default, random| Not optional for mac based auxiliary functions.
 |===
 
@@ -250,10 +250,20 @@ substitutes "0123456789ABCDEF" in place of the field
 * uPartyInfo
   ** uPartyId { || ephemeralKey } { || ephemeralNonce } { || dkmNonce } { || c }
     *** "optional" items such as ephemeralKey *MUST* be included when available for ACVP testing.
+    *** For the purposes of the testing defined in this specification, the uPartyInfo value
+    used to create the fixedInfo that is input to the key derivation function *SHALL* take the form of "uPartyId { || ephemeralKey } 
+    { || ephemeralNonce } { || dkmNonce } { || c }".
+    *** Whether or not an "optional" item, e.g., ephemeralKey, will be included as part of the uPartyInfo
+    for a given test case is dependant on the scheme and party being tested. Please consult <<scheme_generation_requirements>> for more information.
 
 * vPartyInfo
   ** vPartyId { || ephemeralKey } { || ephemeralNonce } { || dkmNonce } { || c }
     *** "optional" items such as ephemeralKey *MUST* be included when available for ACVP testing.
+    *** For the purposes of the testing defined in this specification, the vPartyInfo value
+    used to create the fixedInfo that is input to the key derivation function *SHALL* take the form of "vPartyId { || ephemeralKey } 
+    { || ephemeralNonce } { || dkmNonce } { || c }".
+    *** Whether or not an "optional" item, e.g., ephemeralKey, will be included as part of the vPartyInfo
+    for a given test case is dependant on the scheme and party being tested. Please consult <<scheme_generation_requirements>> for more information.
     
 * context
   ** Random value chosen by ACVP server to represent the context.
