--- a/src/kas/sp800-56c/onestepnocounter/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56c/onestepnocounter/sections/05-capabilities.adoc
@@ -41,7 +41,7 @@ Some algorithm implementations rely on other cryptographic primitives. For examp
 | JSON Value| Description| JSON Type| Valid Values
 
 | auxFunctionName| The auxiliary function to use.| string| SHA-1, SHA2-224, SHA2-256, SHA2-384, SHA2-512, SHA2-512/224, SHA2-512/256, SHA3-224, SHA3-256, SHA3-384, SHA3-512, HMAC-SHA-1, HMAC-SHA2-224, HMAC-SHA2-256, HMAC-SHA2-384, HMAC-SHA2-512, HMAC-SHA2-512/224, HMAC-SHA2-512/256, HMAC-SHA3-224, HMAC-SHA3-256, HMAC-SHA3-384, HMAC-SHA3-512, KMAC-128, KMAC-256 
-| l | The length (in bits) of the keying material to derive (up to a max of 2048 for KMAC). The length may not exceed the output length of the auxiliary function. | number | 
+| l | The length (in bits) of the keying material to derive. | number | (up to a max of 2048 for KMAC). The length may not exceed the output length of the auxiliary function. 
 | macSaltMethods| How the salt is determined (default being all 00s, random being a random salt). Required for MAC based auxFunctions.| array of string| default, random
 |===
 
@@ -57,12 +57,16 @@ Pattern candidates:
 substitutes "0123456789ABCDEF" in place of the field
 
 * uPartyInfo
-  ** uPartyId { || ephemeralKey } { || ephemeralNonce } { || dkmNonce } { || c }
-    *** "optional" items such as ephemeralKey *MUST* be included when available for ACVP testing.
+  ** uPartyId { || ephemeralData }
+    *** For the purposes of the testing defined in this specification, the uPartyInfo value
+    used to create the fixedInfo that is input to the key derivation function *SHALL* take the form of "uPartyId { || ephemeralData }". Because the KDA is being tested in isolation of the specific schemes it may be used with, ephemeralData is used in place of "{ || ephemeralKey } { || ephemeralNonce } { || dkmNonce } { || c }"
+    *** For a given test case, a partyId value (see <<fixedInfo>>) *SHALL* always be given. ephemeralData values (see <<fixedInfo>>) may be provided or omitted.
 
 * vPartyInfo
-  ** vPartyId { || ephemeralKey } { || ephemeralNonce } { || dkmNonce } { || c }
-    *** "optional" items such as ephemeralKey *MUST* be included when available for ACVP testing.
+  ** vPartyId { || ephemeralData }
+    *** For the purposes of the testing defined in this specification, the vPartyInfo value
+    used to create the fixedInfo that is input to the key derivation function *SHALL* take the form of "vPartyId { || ephemeralData }". Because the KDA is being tested in isolation of the specific schemes it may be used with, ephemeralData is used in place of "{ || ephemeralKey } { || ephemeralNonce } { || dkmNonce } { || c }"
+    *** For a given test case, a partyId value (see <<fixedInfo>>) *SHALL* always be given. ephemeralData values (see <<fixedInfo>>) may be provided or omitted.
 
 * context
   ** Random value chosen by ACVP server to represent the context.
